Add OAuth login for Google and GitHub
